2010-04-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdvitype.test: Use installed cm fonts.
	* sample.test, yokotate.test (new): Shell scripts to test
	pDVItype and pPLtoTF/pTFtoPL with yoko and tate fonts.
	* tests/goth10.tfm tests/sample.dvi (new): Data for sample.test.
	* tests/{min10,tmin10}.{pl,tfm} (new): Data for yokotate.test.
	* am/ptex.am: Add the new tests.

2010-04-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pbibtex.ch: Remove unused code 'Check if |max_print_line|...'.
	Akira Kakuto <kakuto@fuk.kindai.ac.jp>, 24 Apr 2010 12:10:13.

2010-04-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pbibtex.ch, kanji.h: Use input_line2() with five arguments
	for correct handling of buffer_overflow.

	* pbibtex-longline-test.pl, pbibtex-openout-test.pl,
	pbibtex-mem.test, pbibtex.test: New tests.
	* am/ptex.am: Add them.

2010-04-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdvitype.ch: Remove unnecessary change.
	* ppltotf.ch: Adapt to bug fix now done in ../pltotf.ch,
	originally by Ken Nakano <nakano@nextsolution.co.jp>.
	* kanji.h (inputline2): Moved from ../../ptexenc/ptexenc.h to here.

	* pbibtex.ch: Correct handling of buffer_overflow.  From Akira.
	* ptex.defines (inputline3): Removed.

	* am/ptex.am: No synctex.  No reason to create ptexdir/lib/.

2010-04-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdvitype.test, ppltotf.test, ptftopl.test (new): Shell scripts
	for basic 'make check' tests.
	* am/ptex.am: Add these tests.

	* pbibtex.ch: Adapt to change (bug fix) in ../bibtex.ch.
	Remove kanji fix of workaround from ../bibtex.ch for breaking
	long lines in module 324; all that is gone with bibtex-0.99d.

2010-04-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ppltotf.ch: Rename PTEX_PLTOTF_HELP => PPLTOTF_HELP.
	* ptftopl.ch: Rename PTEX_TFTOPL_HELP => PTFTOPL_HELP.
	* ptexhelp.h (removed): Help text now in ../help.h.
	* kanji.h: Remove #include "ptexhelp.h" and redefinition of
	TEXMFPOOLNAME and TEXMFENGINENAME.
